style the fixed bottom, aligned all grid properly

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-}
-
+  }
 header {
     height: 2.8rem;
     width: 100%;
@@ -21,6 +20,7 @@ header {
 .fa-search {
  margin-left: 1.3rem;
 }
+
 .menu-bar{
     margin-top: 0.7rem;
 }
@@ -398,6 +398,12 @@ figcaption span{
     left: 62rem;
 }
 
+.side-cotainer a{
+    color: #000;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
 .img-link {
     display: flex;
     margin-bottom: 1rem;
@@ -413,10 +419,10 @@ figcaption span{
 }
 
 footer{
-   margin: 0 1rem; 
    position: absolute;
    top: 642rem;
-   width: 100%;
+   width: 90%;
+   margin-left: 3rem;
 }
 
 footer hr{
@@ -449,11 +455,8 @@ footer hr{
 .footer-list ul a{
    text-decoration: none;
    color: #000;
-   font-size: 0.9rem; 
-}
-
-.footer-list ul li{
-    /* margin: 0.5rem 0; */
+   font-size: 0.9rem;
+   padding-bottom: 0.3rem; 
 }
 
 .footer-list-six li :nth-child(n+2){
@@ -471,23 +474,69 @@ footer hr{
 .footer-list-six {
     border-left: 0.7px solid #888;
     padding-left: 0.8rem;
-    /* height: 90%; */
+}
+.footer-list ul li{
+    margin-bottom: 0.3rem;
 }
 
 .footer-list {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    /* width: 80%; */
+    grid-column-gap: 2rem;
 }
 
-.footer-items ul{
+.footer-items {
+   height: 2.5rem;
+}
+
+.footer-items ul {
     display: flex;
     list-style: none;
     font-size: x-small;
-    /* margin: 0.5rem auto;  */
-    justify-content: center;
-    margin-right: 0.1rem;
-
-    /* width: 1rem; */
+    justify-content: space-evenly;
+    margin-top: 0.8rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 6rem;
+    
 }
+.fixed-bottom {
+    margin-top: 2rem;
+    text-align: center;
+    border-top: 1px solid #000; 
+    position: fixed;
+    bottom: 0; 
+    width: 100%; 
+    background-color: #fff;
+    padding-top: 1.3rem;
+}
+
+.fixed-bottom a{
+    margin-top: 3rem;
+    color: #000;
+    font-size: 1rem;
+    text-decoration: none;
+
+}
+.button-container {
+    float: right; 
+
+}
+.sub-now-btn {
+    margin-right: 2rem;
+    background: transparent;
+    font-size: 0.7rem;
+    font-weight: bold;
+    border: none;
+    color: #000;
+    padding-bottom: 1.2rem;
+}
+.button-container i{
+    margin-right: 4rem;
+    font-size: 1.2rem;
+    padding-bottom: 1.4rem;
+}
+
+
+   
 
